--- a/app/build.gradle
+++ b/app/build.gradle
@@ -37,10 +37,11 @@ android {
         jvmTarget = '1.8'
     }
     buildFeatures {
+        buildConfig = true
         compose true
     }
     composeOptions {
-        kotlinCompilerExtensionVersion '1.2.0'
+        kotlinCompilerExtensionVersion '1.5.0'
     }
     packagingOptions {
         resources {
@@ -50,33 +51,35 @@ android {
 }
 
 dependencies {
-    implementation 'androidx.core:core-ktx:1.8.0'
-    implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.3.1'
-    implementation 'androidx.activity:activity-compose:1.3.1'
+    implementation 'androidx.core:core-ktx:1.12.0'
+    implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.7.0'
+    implementation 'androidx.activity:activity-compose:1.8.2'
     implementation "androidx.compose.ui:ui:$compose_ui_version"
     implementation "androidx.compose.ui:ui-tooling-preview:$compose_ui_version"
-    implementation 'androidx.compose.material:material:1.2.0'
-    implementation 'com.google.firebase:firebase-firestore-ktx:24.8.1'
+    implementation 'androidx.compose.material:material:1.6.2'
+    implementation 'com.google.firebase:firebase-firestore-ktx:24.10.3'
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
     androidTestImplementation "androidx.compose.ui:ui-test-junit4:$compose_ui_version"
     debugImplementation "androidx.compose.ui:ui-tooling:$compose_ui_version"
     debugImplementation "androidx.compose.ui:ui-test-manifest:$compose_ui_version"
-    implementation("androidx.navigation:navigation-compose:2.5.0-alpha01")
-    implementation("androidx.compose.material3:material3:1.1.0-alpha01")
-    implementation("com.airbnb.android:lottie-compose:6.0.1")
+    implementation("androidx.navigation:navigation-compose:2.7.7")
+    implementation("androidx.compose.material3:material3:1.2.0")
+    implementation("com.airbnb.android:lottie-compose:6.1.0")
     implementation "com.google.accompanist:accompanist-systemuicontroller:0.31.1-alpha"
     implementation "com.squareup.retrofit2:retrofit:2.9.0"
     implementation "com.squareup.retrofit2:converter-gson:2.9.0"
     implementation "com.google.dagger:dagger-android-support:2.42"
     implementation "com.google.dagger:hilt-android:$hilt_version"
     kapt "com.google.dagger:hilt-android-compiler:$hilt_version"
-    implementation "androidx.activity:activity-compose:1.7.2"
-    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:1.7.1"
+    implementation "androidx.activity:activity-compose:1.8.2"
+    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:1.7.3"
     //noinspection GradleDependency
     implementation "androidx.compose.runtime:runtime-livedata:$compose_ui_version"
-    implementation "androidx.lifecycle:lifecycle-viewmodel-compose:2.7.0-alpha02"
+    implementation "androidx.lifecycle:lifecycle-viewmodel-compose:2.7.0"
     implementation("io.coil-kt:coil-compose:2.4.0")
+    implementation 'com.jakewharton.timber:timber:5.0.1'
+    implementation("com.squareup.okhttp3:logging-interceptor:4.12.0")
 
 }
