--- a/app/build.gradle
+++ b/app/build.gradle
@@ -81,5 +81,5 @@ dependencies {
     implementation("io.coil-kt:coil-compose:2.4.0")
     implementation 'com.jakewharton.timber:timber:5.0.1'
     implementation("com.squareup.okhttp3:logging-interceptor:4.12.0")
-
+    implementation("io.coil-kt:coil-compose:2.4.0")
 }
