--- a/.gitignore
+++ b/.gitignore
@@ -1,15 +1,34 @@
-*.iml
-.gradle
-/local.properties
-/.idea/caches
-/.idea/libraries
-/.idea/modules.xml
-/.idea/workspace.xml
-/.idea/navEditor.xml
-/.idea/assetWizardSettings.xml
-.DS_Store
-/build
-/captures
-.externalNativeBuild
-.cxx
+#Gradle files
+.gradle/
+build/
+
+#Local configuration file (sdk,path,etc)
 local.properties
+
+#Log/
+*.log
+.DS_Store
+
+#Android studio generated files and folders
+captures/
+.externalNativeBuild/
+.cxx/
+*.apk
+output.json
+
+#Intellij
+*.iml
+.idea/
+misc.xml
+deploymentTargetDropDown.xml
+render.experimental.xml
+
+#KeyStore
+*.jks
+*.keystore
+
+#Google services
+google-services.json
+
+#Android Profiling
+*.hprof
