--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,6 +4,7 @@ plugins {
     id 'kotlin-kapt'
     id 'com.google.dagger.hilt.android'
     id 'com.google.gms.google-services'
+    id 'org.jetbrains.kotlin.plugin.serialization' version("2.0.0")
 }
 
 android {
@@ -12,7 +13,7 @@ android {
 
     defaultConfig {
         applicationId "com.example.pokemonapi"
-        minSdk 24
+        minSdk 26
         targetSdk 34
         versionCode 1
         versionName "1.0"
@@ -51,35 +52,38 @@ android {
 }
 
 dependencies {
-    implementation 'androidx.core:core-ktx:1.12.0'
-    implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.7.0'
-    implementation 'androidx.activity:activity-compose:1.8.2'
+    implementation 'androidx.core:core-ktx:1.13.1'
+    implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.8.3'
+    implementation 'androidx.activity:activity-compose:1.9.0'
     implementation "androidx.compose.ui:ui:$compose_ui_version"
     implementation "androidx.compose.ui:ui-tooling-preview:$compose_ui_version"
-    implementation 'androidx.compose.material:material:1.6.2'
-    implementation 'com.google.firebase:firebase-firestore-ktx:24.10.3'
+    implementation 'androidx.compose.material:material:1.6.8'
+    implementation 'com.google.firebase:firebase-firestore-ktx:25.0.0'
     testImplementation 'junit:junit:4.13.2'
-    androidTestImplementation 'androidx.test.ext:junit:1.1.5'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
+    androidTestImplementation 'androidx.test.ext:junit:1.2.1'
+    androidTestImplementation 'androidx.test.espresso:espresso-core:3.6.1'
     androidTestImplementation "androidx.compose.ui:ui-test-junit4:$compose_ui_version"
     debugImplementation "androidx.compose.ui:ui-tooling:$compose_ui_version"
     debugImplementation "androidx.compose.ui:ui-test-manifest:$compose_ui_version"
-    implementation("androidx.navigation:navigation-compose:2.7.7")
-    implementation("androidx.compose.material3:material3:1.2.0")
-    implementation("com.airbnb.android:lottie-compose:6.1.0")
+    implementation("androidx.navigation:navigation-compose:2.8.0-beta05")
+    implementation("androidx.compose.material3:material3:1.2.1")
+    implementation("com.airbnb.android:lottie-compose:6.4.0")
     implementation "com.google.accompanist:accompanist-systemuicontroller:0.31.1-alpha"
     implementation "com.squareup.retrofit2:retrofit:2.9.0"
     implementation "com.squareup.retrofit2:converter-gson:2.9.0"
     implementation "com.google.dagger:dagger-android-support:2.42"
     implementation "com.google.dagger:hilt-android:$hilt_version"
     kapt "com.google.dagger:hilt-android-compiler:$hilt_version"
-    implementation "androidx.activity:activity-compose:1.8.2"
-    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:1.7.3"
+    implementation "androidx.activity:activity-compose:1.9.0"
+    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:1.8.0"
     //noinspection GradleDependency
     implementation "androidx.compose.runtime:runtime-livedata:$compose_ui_version"
-    implementation "androidx.lifecycle:lifecycle-viewmodel-compose:2.7.0"
-    implementation("io.coil-kt:coil-compose:2.4.0")
+    implementation "androidx.lifecycle:lifecycle-viewmodel-compose:2.8.3"
+    implementation("io.coil-kt:coil-compose:2.6.0")
     implementation 'com.jakewharton.timber:timber:5.0.1'
     implementation("com.squareup.okhttp3:logging-interceptor:4.12.0")
-    implementation("io.coil-kt:coil-compose:2.4.0")
+    implementation("io.coil-kt:coil-compose:2.6.0")
+    implementation 'androidx.hilt:hilt-navigation-compose:1.2.0'
+    implementation("org.jetbrains.kotlinx:kotlinx-serialization-json:1.6.3")
+
 }
