--- a/app/build.gradle
+++ b/app/build.gradle
@@ -85,5 +85,8 @@ dependencies {
     implementation("io.coil-kt:coil-compose:2.6.0")
     implementation 'androidx.hilt:hilt-navigation-compose:1.2.0'
     implementation("org.jetbrains.kotlinx:kotlinx-serialization-json:1.6.3")
-
+    implementation("androidx.room:room-runtime:2.6.1")
+    annotationProcessor("androidx.room:room-compiler:2.6.1")
+    implementation("androidx.room:room-ktx:2.6.1")
+    kapt("androidx.room:room-compiler:2.6.1")
 }
