--- a/app/build.gradle
+++ b/app/build.gradle
@@ -38,6 +38,7 @@ android {
         jvmTarget = '1.8'
     }
     buildFeatures {
+        viewBinding = true
         buildConfig = true
         compose true
     }
@@ -54,11 +55,16 @@ android {
 dependencies {
     implementation 'androidx.core:core-ktx:1.13.1'
     implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.8.3'
-    implementation 'androidx.activity:activity-compose:1.9.0'
+    implementation 'androidx.activity:activity-compose:1.9.1'
     implementation "androidx.compose.ui:ui:$compose_ui_version"
     implementation "androidx.compose.ui:ui-tooling-preview:$compose_ui_version"
     implementation 'androidx.compose.material:material:1.6.8'
     implementation 'com.google.firebase:firebase-firestore-ktx:25.0.0'
+    implementation 'com.google.firebase:firebase-firestore:25.0.0'
+    implementation 'androidx.appcompat:appcompat:1.7.0'
+    implementation 'com.google.android.material:material:1.12.0'
+    implementation 'androidx.activity:activity:1.9.1'
+    implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.2.1'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.6.1'
@@ -69,24 +75,29 @@ dependencies {
     implementation("androidx.compose.material3:material3:1.2.1")
     implementation("com.airbnb.android:lottie-compose:6.4.0")
     implementation "com.google.accompanist:accompanist-systemuicontroller:0.31.1-alpha"
-    implementation "com.squareup.retrofit2:retrofit:2.9.0"
-    implementation "com.squareup.retrofit2:converter-gson:2.9.0"
+    implementation "com.squareup.retrofit2:retrofit:2.11.0"
+    implementation "com.squareup.retrofit2:converter-gson:2.11.0"
     implementation "com.google.dagger:dagger-android-support:2.42"
     implementation "com.google.dagger:hilt-android:$hilt_version"
     kapt "com.google.dagger:hilt-android-compiler:$hilt_version"
-    implementation "androidx.activity:activity-compose:1.9.0"
-    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:1.8.0"
+    implementation "androidx.activity:activity-compose:1.9.1"
+    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:1.8.1"
     //noinspection GradleDependency
     implementation "androidx.compose.runtime:runtime-livedata:$compose_ui_version"
-    implementation "androidx.lifecycle:lifecycle-viewmodel-compose:2.8.3"
+    implementation "androidx.lifecycle:lifecycle-viewmodel-compose:2.8.4"
     implementation("io.coil-kt:coil-compose:2.6.0")
     implementation 'com.jakewharton.timber:timber:5.0.1'
     implementation("com.squareup.okhttp3:logging-interceptor:4.12.0")
-    implementation("io.coil-kt:coil-compose:2.6.0")
+    implementation("io.coil-kt:coil:2.6.0")
+   implementation ("io.coil-kt:coil-svg:2.6.0")
     implementation 'androidx.hilt:hilt-navigation-compose:1.2.0'
     implementation("org.jetbrains.kotlinx:kotlinx-serialization-json:1.6.3")
     implementation("androidx.room:room-runtime:2.6.1")
     annotationProcessor("androidx.room:room-compiler:2.6.1")
     implementation("androidx.room:room-ktx:2.6.1")
     kapt("androidx.room:room-compiler:2.6.1")
+    implementation 'com.google.maps.android:maps-compose:6.1.0'
+    implementation 'com.exyte:animated-navigation-bar:1.0.0'
+    testImplementation 'io.mockk:mockk:1.12.2'
+
 }
